apps/oxlint/src/snapshots/fixtures__cli__tsgolint_--skip-type-aware -c config-type-aware.json no-floating-promises.ts@oxlint.snap
---
source: apps/oxlint/src/tester.rs
assertion_line: 134
---
########## 
arguments: --skip-type-aware -c config-type-aware.json no-floating-promises.ts
working directory: fixtures/cli/tsgolint
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
