apps/oxlint/src/snapshots/fixtures__cli__tsgolint_--type-aware --silent@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-aware --silent
working directory: fixtures/cli/tsgolint
----------

Found 0 warnings and 86 errors.
Finished in <variable>ms on 61 files with 60 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
